--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,7 @@ lesson3/server_base.db3
 lesson4/logs/client.log
 lesson4/logs/server.log
 lesson4/server/server_base.db3
+lesson5/logs/client.log
+lesson5/logs/server.log
+lesson5/server/server_base.db3
+lesson5/server/client_base.db3
